@@ -1,3 +1,6 @@
+2002-xx-xx v0.xx:
+  * Use timegm func in date string parser if available, fixes possibility of some times being parsed an hour off due to daylight savings time.
+
 2002-06-17 v0.19.1:
   * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
   * Fix configure script not resetting a variable between testing packages causing it to not run some tests and to miss placing some data in the Makefile.
